--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,36 +29,44 @@
     display: flex; /* Use flexbox for layout */
     flex-direction: column; /* Stack items vertically */
     align-items: center; /* Center items horizontally */
-    gap: 10px; /* Space between counters and button */
+    gap: 10px; /* Space between the icon container and the button */
+}
+
+.icon-container {
+    display: flex; /* Enable horizontal stacking of icons */
+    justify-content: center; /* Center icons in the container */
+    gap: 50px; /* Space between icons */
 }
 
 .counter {
-    display: flex;
+    display: flex; 
     flex-direction: column; /* Stack icon and count vertically */
     align-items: center; /* Center icon and count */
     font-size: 24px; /* Adjust size as needed */
 }
 
-#open-popup-button {
+.counter-icon {
+    width: 70px; /* Fixed width for the icons */
+    height: 80px; /* Maintain aspect ratio */
+    margin-bottom: 5px; /* Space between icon and count */
+}
+
+/* Button Styles */
+.button {
     padding: 10px 20px; /* Button padding */
     font-size: 20px; /* Adjust font size as needed */
     background-color: var(--button-bg-color); /* Button background color */
-    color: white;
-    border: none;
+    color: white; /* Text color */
+    border: none; /* No border */
     border-radius: 5px; /* Rounded corners */
-    cursor: pointer;
-    font-family: 'retro-font', sans-serif;
+    cursor: pointer; /* Pointer cursor on hover */
+    font-family: 'retro-font', sans-serif; /* Font family */
     text-align: center; /* Center text inside button */
+    transition: background-color 0.3s; /* Smooth transition for hover effect */
 }
 
-button:hover {
-    background-color: var(--button-hover-bg-color); /* Button hover color */
-}
-
-.counter-icon {
-    width: 80px; /* Adjust icon size as needed */
-    height: auto;
-    margin-right: 10px; /* Space between icon and count */
+.button:hover {
+    background-color: var(--button-hover-bg-color); /* Change background on hover */
 }
 
 @font-face {
@@ -70,7 +78,7 @@ button:hover {
     position: absolute; /* This allows us to control the character's position */
     bottom: -300px;       /* Position the character at the bottom */
     left: 360px;         /* Starting point from the left */
-    width: 150px;        /* Adjust size for a pixelated look */
+    width: 200px;        /* Adjust size for a pixelated look */
     height: auto;
     image-rendering: pixelated; /* Keeps pixelated look on scaling */
     z-index: 1; /* Ensure it’s above the background but below popups */
@@ -116,8 +124,8 @@ body::after {
 /* Heading Style */
 h1 {
     color: var(--secondary-text-color);
-    font-size: 90px;
-    margin-top: 50px;
+    font-size: 110px;
+    margin-top: 60px;
 }
 
 /* Upload Section Styles */
